Fix alignment

--- a/static/style.css
+++ b/static/style.css
@@ -48,6 +48,7 @@ body {
 #welcome {
   position: absolute;
   text-align: center;
+  flex-wrap: wrap;
 }
 
 #welcome h2 {
@@ -56,6 +57,7 @@ body {
   animation-duration: 2s;
   animation-delay: 0s;
   animation-fill-mode: forwards;
+  flex-wrap:wrap;
 }
 #welcome h1 {
   opacity: 0;
@@ -63,6 +65,7 @@ body {
   animation-duration: 2s;
   animation-delay: 1s;
   animation-fill-mode: forwards;
+  flex-wrap:wrap;
 
 }
 #welcome h4 {
@@ -71,6 +74,7 @@ body {
   animation-duration: 1.5s;
   animation-delay: 3s;
   animation-fill-mode: forwards;
+  flex-wrap:wrap;
 
 }
 
@@ -141,4 +145,6 @@ body {
   display: flex;
   display: none;
   position: absolute;
+  text-align: center;
+  flex-wrap: wrap;
 }
